# alternator-regulator

./: .gitmodules  Cargo.toml  alternator-regulator.yaml  alternator-test.yaml  build.rs
.cargo/: config.toml
src/: ble_scan.rs  fmt.rs  lib.rs  main.rs  util.rs
src/acq/: ble_scan.rs
src/app/: control.rs  logger.rs  mod.rs  mode.rs  shared.rs  statemachine.rs  victron.rs
src/app/control/: mod.rs
src/app/state/: regulator_mode.rs
src/app/statemachine/: mod.rs  regulator_mode.rs
src/board/: mod.rs  resources.rs  startup.rs
src/board/driver/: analog.rs  display.rs  mod.rs  pcnt.rs  pps.rs  radio.rs  wifi_ble.rs
src/board/io/: ble_scan.rs  button.rs  led.rs  mod.rs  pps.rs  radio.rs  rpm.rs  spi2.rs
src/control/: mod.rs
src/driver/: display.rs
src/io/: ble_scan.rs  mod.rs  rpm.rs
src/lvgl/: mod.rs
src/state/: mod.rs  regulator_mode.rs
src/task/: ble_scan.rs  mod.rs
src/ui/: lvgl.rs  lvgl_buffers.c  lvgl_buffers.rs  mod.rs
src/util/: led_debug.rs  mod.rs  zc.rs
