[package]
edition = "2021"
name = "altreg-fire27-rs"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "altreg-fire27-rs"
path = "src/main.rs"
test = false
bench = false


[dependencies]
atomic_float = { version = "1.1.0"}
defmt = "1.0.1"
#critical-section = "1.2.0"
heapless = "0.9.1"
static_cell = { version = "2.1.1", features = ["nightly"] }
num-traits = { version="0.2.19", default-features = false }
num-derive = "0.4.2"

embedded-hal =  { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.3.0", features = ["async", "defmt-03"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }

esp-alloc = { version = "0.8.0", features = ["defmt", "internal-heap-stats"] }
esp-backtrace = { version = "0.17.0", features = ["esp32", "exception-handler", "panic-handler", "defmt"] }
esp-println = { version = "0.15.0", features = ["esp32", "defmt-espflash", "timestamp"] }

esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32", "defmt", "unstable", ] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32", "defmt"] }

# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.7.0", features = ["defmt", "nightly"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "defmt",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-futures = "0.1.2"
#embassy-embedded-hal = { version = "0.5.0", features = ["defmt", "time"] }

esp-wifi = { version = "0.15.0", features = [
    "ble",
    "builtin-scheduler",
    "coex",
    "esp-alloc",
    "esp32",
    "defmt",
    "smoltcp",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

trouble-host = { version="0.2.4", features = ["gatt", "scan", "defmt"] }
bt-hci = { version = "0.3.2" }
victron_ble = { path="victron_ble", default-features = false }
mipidsi = "0.9.0"
lvgl_rust_sys = { path = "lvgl_rust_sys", default-features = false }
nb = "1.1.0"
async-button = { version = "0.2.0", features = ["defmt"] }
thiserror-no-std = "2.0.2"
log = "0.4.28"


[build-dependencies]
cmake = "0.1"
cc = "1.2.38"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[patch.crates-io]
#esp-wifi = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-backtrace = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-hal = {path="esp-hal/esp-hal"}
#esp-hal-embassy = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-alloc = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-println = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}