[package]
edition = "2021"
name = "alternator-regulator"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "altreg-fire27"
path = "src/main.rs"
test = false
bench = false


[dependencies]
# from esp-hal repo
esp-alloc           = { path = "esp-hal/esp-alloc", features = ["internal-heap-stats"] }
esp-backtrace       = { path = "esp-hal/esp-backtrace", features = ["esp32", "exception-handler", "panic-handler", "custom-halt"] }
esp-println         = { path = "esp-hal/esp-println", features = ["esp32", "timestamp", "critical-section", "uart"], default-features = false}
esp-bootloader-esp-idf = { path = "esp-hal/esp-bootloader-esp-idf", features = ["esp32"] }
esp-hal             = { path = "esp-hal/esp-hal", features = ["esp32","unstable"] }
esp-hal-embassy     = { path = "esp-hal/esp-hal-embassy", features = ["esp32"] }
esp-wifi            = { path = "esp-hal/esp-wifi", features = ["esp32", "ble", "builtin-scheduler", "coex", "esp-alloc", "wifi", "smoltcp"] }

# embeded-hal family
embedded-hal =  { version = "1.0.0", features = [] }
embedded-hal-async =  { version = "1.0.0", features = [] }
embedded-hal-bus = { version = "0.3.0", features = ["async", ] }
embedded-graphics = { version = "0.8.1", features = [] }

# Embassy
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-sync = { version = "0.7.2", features = [] }
embassy-time = { version = "0.4.0", features = [] }
embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-futures = "0.1.2"
#smoltcp = { version = "0.12.0", default-features = false, features = [
#    "defmt",
#    "medium-ethernet",
#    "multicast",
#    "proto-dhcpv4",
#    "proto-dns",
#    "proto-ipv4",
#    "socket-dns",
#    "socket-icmp",
#    "socket-raw",
#    "socket-tcp",
#    "socket-udp",
#] }

# others
atomic_float = { version = "1.1.0"}
defmt = { version = "1.0.1", optional = true }
log-04 = { package = "log", version = "0.4.28", optional = true }
cfg-if = "1"

heapless = { version = "0.9.1" , features = ["nightly"]}
static_cell = { version = "2.1.1", features = ["nightly"] }
num-traits = { version="0.2.19", default-features = false }
num-derive = "0.4.2"

trouble-host = { version="0.2.4", features = ["gatt", "scan"] }
bt-hci = { version = "0.3.2" }
victron_ble = { path="victron_ble", default-features = false }
mipidsi = "0.9.0"
lvgl_rust_sys = { path = "lvgl_rust_sys", default-features = false }
nb = "1.1.0"
async-button = { version = "0.2.0" }
thiserror-no-std = "2.0.2"
statig = { version = "0.4.1", features = ["async"] }
libm = "0.2.15"
embedded-sdmmc = "0.9.0"


[build-dependencies]
cmake = "0.1"
cc = "1.2.38"

[features]
default = [
    "log-04",
#    "defmt",
]

#! ### Logging Feature Flags
## Enable logging output using version 0.4 of the `log` crate.
log-04 = [
    "dep:log-04",
    "esp-backtrace/colors",
    "esp-backtrace/println",
    "esp-println/log-04",
    "esp-println/colors",
    "esp-println/timestamp",
]

## Enable logging output using `defmt` and implement `defmt::Format` on certain types.
defmt = [
    "dep:defmt",

    "esp-alloc/defmt",
    "esp-backtrace/defmt",
    "esp-println/defmt-espflash",
    "esp-bootloader-esp-idf/defmt",

    "esp-hal/defmt",
    "esp-hal-embassy/defmt",
    "esp-wifi/defmt",

    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embassy-sync/defmt",
    "embassy-net/defmt",
    "embassy-futures/defmt",

    "embedded-hal/defmt-03",
    "embedded-hal-bus/defmt-03",
    "embedded-graphics/defmt",

    "async-button/defmt",
    "bt-hci/defmt",
    "trouble-host/defmt",
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[patch.crates-io]
#esp-wifi = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-backtrace = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-hal = {path="esp-hal/esp-hal"}
#esp-hal-embassy = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-alloc = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
#esp-println = {git = "https://github.com/esp-rs/esp-hal.git", rev = "56be259c41305f24276852d2af4fce16247107bd"}
